# mlx-transformer-vm

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
examples/: addition.c  addition.txt  collatz.c  collatz.txt  fibonacci.c  fibonacci.txt  hello.c  hello.txt  manifest.yaml
mlx_transformer_vm/: __init__.py  build.py  evaluator.py  parity.py  runner.py  specialize.py
mlx_transformer_vm/attention/: __init__.py  hull2d_cht.h  hull_cache.py  hull_ext.cpp  hull_python.py  optimized_cache.py  standard_cache.py
mlx_transformer_vm/compilation/: __init__.py  compile_wasm.py  decoder.py  lower.py  runtime.h
mlx_transformer_vm/graph/: __init__.py  core.py
mlx_transformer_vm/model/: __init__.py  transformer.py  weights.py
mlx_transformer_vm/scheduler/: __init__.py  deterministic.py  milp.py
mlx_transformer_vm/tests/: __init__.py  conftest.py  test_evaluator.py  test_graph_core.py  test_hull_cache.py  test_hull_comparison.py  test_parity.py  test_precision_limits.py  test_runtime.py  test_scheduler.py  test_specialize.py  test_wasm_machine.py  test_weights.py
mlx_transformer_vm/wasm/: __init__.py  interpreter.py  reference.py
