[project]
name = "mlx-transformer-vm"
version = "0.2.0"
description = "MLX Python port of Percepta's transformer-vm"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Travis Cline"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.26.0",
    "numpy>=2.0.0",
    "pulp>=2.8.0",
    "pybind11>=2.12.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
wasm-eval-mlx = "mlx_transformer_vm.evaluator:main"
wasm-reference-mlx = "mlx_transformer_vm.wasm.reference:main"
tvm-mlx-parity = "mlx_transformer_vm.parity:main"
wasm-compile = "mlx_transformer_vm.compilation.compile_wasm:main"
wasm-build = "mlx_transformer_vm.build:main"
wasm-run = "mlx_transformer_vm.runner:main"
wasm-specialize = "mlx_transformer_vm.specialize:main"

[project.urls]
Repository = "https://github.com/tmc/mlx-transformer-vm"
Issues = "https://github.com/tmc/mlx-transformer-vm/issues"
Upstream = "https://github.com/Percepta-Core/transformer-vm"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlx_transformer_vm*"]

[tool.setuptools.package-data]
mlx_transformer_vm = ["**/*.h"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mlx_transformer_vm"]

[tool.pytest.ini_options]
testpaths = ["mlx_transformer_vm/tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that compile local C examples",
]
